--- a/top/t500.md
+++ b/top/t500.md
@@ -22,16 +22,16 @@
 |:----|:----|
 |[2021](https://www.fortunechina.com/fortune500/c/2021-08/02/content_394571.htm)  [本地镜像](t500-en2021.md)|[2021](https://www.fortunechina.com/fortune500/c/2021-07/20/content_392708.htm)  [本地镜像](t500-cn2021.md)
 |[2020](https://www.fortunechina.com/fortune500/c/2020-08/10/content_372148.htm)  [本地镜像](t500-en2020.md)|[2020](https://www.fortunechina.com/fortune500/c/2020-07/27/content_369925.htm)  [本地镜像](t500-cn2020.md)
-|[2019](https://www.fortunechina.com/fortune500/c/2019-07/22/content_339535.htm)|[2019](https://www.fortunechina.com/fortune500/c/2019-07/10/content_337536.htm)  [本地镜像](t500-cn2019.md)
-|[2018](https://www.fortunechina.com/fortune500/c/2018-07/19/content_311046.htm)|[2018](https://www.fortunechina.com/fortune500/c/2018-07/10/content_309961.htm)  [本地镜像](t500-cn2018.md)
-|[2017](https://www.fortunechina.com/fortune500/c/2017-07/20/content_286785.htm)|[2017](https://www.fortunechina.com/fortune500/c/2017-07/31/content_287415.htm)  [本地镜像](t500-cn2017.md)
-|[2016](https://www.fortunechina.com/fortune500/c/2016-07/20/content_266955.htm)|[2016](https://www.fortunechina.com/fortune500/c/2016-07/13/content_266415.htm)  [本地镜像](t500-cn2016.md)
-|[2015](https://www.fortunechina.com/fortune500/c/2015-07/22/content_244435.htm)|[2015](https://www.fortunechina.com/fortune500/c/2015-07/08/content_242835.htm)  [本地镜像](t500-cn2015.md)
-|[2014](https://www.fortunechina.com/fortune500/c/2014-07/07/content_212535.htm)|[2014](https://www.fortunechina.com/fortune500/c/2014-07/14/content_212975.htm)  [本地镜像](t500-cn2014.md)
-|[2013](https://www.fortunechina.com/fortune500/c/2013-07/08/content_164375.htm)|[2013](https://www.fortunechina.com/fortune500/c/2013-07/16/content_165379.htm)
-|[2012](https://www.fortunechina.com/fortune500/c/2012-07/09/content_106535.htm)|[2012](https://www.fortunechina.com/fortune500/c/2012-07/13/content_107377.htm)
-|[2011](https://www.fortunechina.com/fortune500/c/2011-07/07/content_62335.htm)|[2011](https://www.fortunechina.com/fortune500/c/2011-07/13/content_62684.htm)
-|[2010](https://www.fortunechina.com/fortune500/c/2010-07/09/content_38195.htm)|[2010](https://www.fortunechina.com/fortune500/c/2010-07/13/content_38379.htm)
+|[2019](https://www.fortunechina.com/fortune500/c/2019-07/22/content_339535.htm)  [本地镜像](t500-en2019.md)|[2019](https://www.fortunechina.com/fortune500/c/2019-07/10/content_337536.htm)  [本地镜像](t500-cn2019.md)
+|[2018](https://www.fortunechina.com/fortune500/c/2018-07/19/content_311046.htm)  [本地镜像](t500-en2018.md)|[2018](https://www.fortunechina.com/fortune500/c/2018-07/10/content_309961.htm)  [本地镜像](t500-cn2018.md)
+|[2017](https://www.fortunechina.com/fortune500/c/2017-07/20/content_286785.htm)  [本地镜像](t500-en2017.md)|[2017](https://www.fortunechina.com/fortune500/c/2017-07/31/content_287415.htm)  [本地镜像](t500-cn2017.md)
+|[2016](https://www.fortunechina.com/fortune500/c/2016-07/20/content_266955.htm)  [本地镜像](t500-en2016.md)|[2016](https://www.fortunechina.com/fortune500/c/2016-07/13/content_266415.htm)  [本地镜像](t500-cn2016.md)
+|[2015](https://www.fortunechina.com/fortune500/c/2015-07/22/content_244435.htm)  [本地镜像](t500-en2015.md)|[2015](https://www.fortunechina.com/fortune500/c/2015-07/08/content_242835.htm)  [本地镜像](t500-cn2015.md)
+|[2014](https://www.fortunechina.com/fortune500/c/2014-07/07/content_212535.htm)  [本地镜像](t500-en2014.md)|[2014](https://www.fortunechina.com/fortune500/c/2014-07/14/content_212975.htm)  [本地镜像](t500-cn2014.md)
+|[2013](https://www.fortunechina.com/fortune500/c/2013-07/08/content_164375.htm)  [本地镜像](t500-en2013.md)|[2013](https://www.fortunechina.com/fortune500/c/2013-07/16/content_165379.htm)
+|[2012](https://www.fortunechina.com/fortune500/c/2012-07/09/content_106535.htm)  [本地镜像](t500-en2012.md)|[2012](https://www.fortunechina.com/fortune500/c/2012-07/13/content_107377.htm)
+|[2011](https://www.fortunechina.com/fortune500/c/2011-07/07/content_62335.htm)  [本地镜像](t500-en2011.md)|[2011](https://www.fortunechina.com/fortune500/c/2011-07/13/content_62684.htm)
+|[2010](https://www.fortunechina.com/fortune500/c/2010-07/09/content_38195.htm)  [本地镜像](t500-en2010.md)|[2010](https://www.fortunechina.com/fortune500/c/2010-07/13/content_38379.htm)
 |[2009](https://www.fortunechina.com/fortune500/c/2009-07/08/content_21391.htm)|
 |[2008](https://www.fortunechina.com/fortune500/c/2008-10/15/content_12413.htm)|
 |[2007](https://www.fortunechina.com/fortune500/c/2007-10/15/content_9517.htm)|
