--- a/top/t500.md
+++ b/top/t500.md
@@ -1,22 +1,18 @@
-- [全球排行榜](https://www.fortunechina.com/rankings/node_11663.htm)
-- [世界500强](https://www.fortunechina.com/fortune500/index.htm)
-  😄 [2021年《财富》世界500强排行榜](https://www.fortunechina.com/fortune500/c/2021-08/02/content_394571.htm)
-- [中国500强](https://www.fortunechina.com/fortune500/node_4302.htm)
-  😄 [2021年《财富》中国500强排行榜](https://www.fortunechina.com/fortune500/c/2021-07/20/content_392708.htm)
+-  [**返回**](../README.md)  | [**下载**](../data.md)
 
-#### 最新榜单（世界500强）
-- [2021年《财富》世界500强排行榜](https://www.fortunechina.com/fortune500/c/2021-08/02/content_394571.htm)
+## [7.财富FORTUNE 500强](https://www.fortunechina.com/rankings/node_11663.htm) :+1::+1::+1:  
+#### 最新榜单——[世界500强](https://www.fortunechina.com/fortune500/index.htm)
+- 😄[2021年《财富》世界500强排行榜](https://www.fortunechina.com/fortune500/c/2021-08/02/content_394571.htm)
 - [2021年《财富》世界500强榜单上的143家中国公司](  https://www.fortunechina.com/fortune500/c/2021-08/02/content_394569.htm)
 - [2021年《财富》世界500强最赚钱的50家公司](
   https://www.fortunechina.com/fortune500/c/2021-08/02/content_394570.htm)
 - [2021年《财富》世界500强亏损公司](
   https://www.fortunechina.com/fortune500/c/2021-08/02/content_394565.htm)
-#### 最新榜单（中国500强）
-- [2021年《财富》中国500强排行榜](https://www.fortunechina.com/fortune500/c/2021-07/20/content_392708.htm)
+#### 最新榜单——[中国500强](https://www.fortunechina.com/fortune500/node_4302.htm)
+- 😄[2021年《财富》中国500强排行榜](https://www.fortunechina.com/fortune500/c/2021-07/20/content_392708.htm)
 - [2021年《财富》中国500强亏损公司](https://www.fortunechina.com/fortune500/c/2021-07/20/content_392707.htm)
 - [2021年《财富》中国500强净资产收益率（ROE）最高的40家公司](https://www.fortunechina.com/fortune500/c/2021-07/20/content_392706.htm)
 - [2021年《财富》中国500强净利润率最高的40家公司](https://www.fortunechina.com/fortune500/c/2021-07/20/content_392705.htm)
-
 
 |世界500强|中国500强|
 |:----|:----|
